[gd_scene load_steps=11 format=2]

[ext_resource path="res://sprites/objects/door/blue/sBlueDoor_0.png" type="Texture" id=1]
[ext_resource path="res://scenes/objects/door/Door.gd" type="Script" id=2]
[ext_resource path="res://sprites/objects/door/tlDoor.png" type="Texture" id=3]
[ext_resource path="res://sprites/objects/door/blue/sBlueDoor_1.png" type="Texture" id=4]
[ext_resource path="res://sprites/objects/door/blue/sBlueDoor_3.png" type="Texture" id=5]
[ext_resource path="res://sprites/objects/door/blue/sBlueDoor_2.png" type="Texture" id=6]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 28, 32 )

[sub_resource type="SpriteFrames" id=2]
animations = [ {
"frames": [ ExtResource( 1 ), ExtResource( 4 ), ExtResource( 6 ), ExtResource( 5 ) ],
"loop": false,
"name": "blue_open",
"speed": 20.0
}, {
"frames": [ ExtResource( 5 ), ExtResource( 6 ), ExtResource( 4 ), ExtResource( 1 ) ],
"loop": false,
"name": "blue_close",
"speed": 20.0
} ]

[sub_resource type="AtlasTexture" id=3]
atlas = ExtResource( 3 )
region = Rect2( 8, 0, 48, 64 )

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 3, 31 )

[node name="Door" type="StaticBody2D"]
z_index = 1
z_as_relative = false
collision_layer = 524288
collision_mask = 2
script = ExtResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( -12, 0 )
shape = SubResource( 1 )

[node name="Sprite" type="AnimatedSprite" parent="."]
position = Vector2( 12, 0 )
frames = SubResource( 2 )
animation = "blue_open"

[node name="Frame" type="Sprite" parent="."]
position = Vector2( -16, 0 )
texture = SubResource( 3 )

[node name="FullDoorArea" type="Area2D" parent="."]
monitorable = false
collision_layer = 524288

[node name="CollisionShape2D" type="CollisionShape2D" parent="FullDoorArea"]
position = Vector2( -12, 0 )
shape = SubResource( 1 )

[node name="TransitionTriggerArea" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="TransitionTriggerArea"]
modulate = Color( 0.921569, 0, 1, 1 )
position = Vector2( -33, 0 )
shape = SubResource( 4 )

[node name="TargetSpawnPosition" type="Position2D" parent="."]
position = Vector2( -32, 0 )

[node name="Tween" type="Tween" parent="."]

[connection signal="body_entered" from="TransitionTriggerArea" to="." method="_on_TransitionTriggerArea_body_entered"]
